<resources>
    <string name="app_name">ProjectoFinal</string>
    <string name="registrarme">Registrarme\n</string>
    <string name="iniciar_sesion">Iniciar Sesion\n</string>
    <string name="registrate">Registrate</string>
    <string name="nombre_apellidos">Nombre y Apellidos\n</string>
    <string name="email">Email</string>
    <string name="telefono">Teléfono</string>
    <string name="contraseña">Contraseña</string>
    <string name="selected_date">%1$s</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>